--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,21 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+
+plugins {
+    id "com.android.application" version "8.8" apply false
+    id "com.android.library" version "8.8" apply false
+    id "org.jetbrains.kotlin.android" version "2.1.10" apply false
+    id "org.jetbrains.kotlin.jvm" version "2.1.10" apply false
+    id "com.google.gms.google-services" version "4.3.10" apply false
+    id "com.google.firebase.crashlytics" version "2.7.1" apply false
+    id "com.google.firebase.firebase-perf" version "1.4.0" apply false
+}
+
 include ':app'
 
 def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
@@ -8,4 +26,5 @@ localPropertiesFile.withReader("UTF-8") { reader -> properties.load(reader) }
 
 def flutterSdkPath = properties.getProperty("flutter.sdk")
 assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
+
 apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
