--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: 
   mockito: ^5.4.4
+  flutter_dotenv: ^5.1.0
+  build_runner: ^2.4.13
+  build: ^2.4.1
+  provider: ^6.1.2
   
 
 
